# dormyboba-core

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: build.yml  integration.yml  test.yml  workflow.yml
cert/: ca.crt  chain.crt  mock.crt  mock.key
config/: config.yaml  service_account.json
db/: 1_drop.sql  2_db.sql  3_schema.sql  4_data.sql  data.sql  data_for_mailing.sql  schema.sql
dormyboba_core/: __main__.py  app.py  config.py  container.py  logger.py  server.py
dormyboba_core/api/: api.py
dormyboba_core/entity/: __init__.py  academic_type.py  common.py  defect.py  dormyboba_user.py  institute.py  mailing.py  queue.py  token.py  verification_code.py
dormyboba_core/model/: __init__.py  defect.py  generated.py
dormyboba_core/repository/: __init__.py  academic_type.py  defect.py  dormyboba_user.py  institute.py  mailing.py  queue.py  verification_code.py
dormyboba_core/service/: __init__.py  dormyboba_servicer.py
dormyboba_core/templates/: widget.html
tests/: test_config.py
tests/cert/: mock.crt
tests/entity/: test_dormyboba_user.py  test_institute.py  test_mailing.py  test_token.py
tests/integration/: nginx.conf
tests/integration/features/: academic_type.feature  environment.py  institute.feature  invite.feature  invite.md  mailing.feature  queue.feature  token.feature  user.feature
tests/integration/features/steps/: academic_type.py  common.py  docker-compose.yml  institute.py  invite.py  mailing.py  queue.py  token.py  user.py  (+1 more)
tests/repository/: test_academic_type.py  test_defect.py  test_mailing.py  test_queue.py
tests/service/: test_dormyboba_servicer.py
tests/unit/: test_config.py
tests/unit/entity/: test_academic_type.py  test_defect.py  test_queue.py  test_token.py
tests/unit/repository/: test_academic_type.py  test_defect.py  test_dormyboba_user.py  test_institute.py
tests/unit/service/: test_dormyboba_servicer.py
(+5 files in other folders)
